// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render 1`] = `
<div>
  <header
    class="header"
  >
    <h1>
      Test Title
    </h1>
    <button
      aria-label="show add task"
      type="button"
    >
      <svg
        cursor="pointer"
        fill="currentColor"
        height="28"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </button>
  </header>
</div>
`;

exports[`Header should render the FaMinus icon if showAdd is true 1`] = `
<div>
  <header
    class="header"
  >
    <h1>
      Test
    </h1>
    <button
      aria-label="hide add task"
      type="button"
    >
      <svg
        cursor="pointer"
        fill="currentColor"
        height="28"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </button>
  </header>
</div>
`;

exports[`Header should render the FaPlus icon if showAdd is false 1`] = `
<div>
  <header
    class="header"
  >
    <h1>
      Test
    </h1>
    <button
      aria-label="show add task"
      type="button"
    >
      <svg
        cursor="pointer"
        fill="currentColor"
        height="28"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        />
      </svg>
    </button>
  </header>
</div>
`;
